--- a/ui/src/app/views/card/component.html
+++ b/ui/src/app/views/card/component.html
@@ -17,3 +17,10 @@
   </div>
 </div>
 
+<app-rename-modal [resourceType]="'notebook'" [resource]="this.card.notebook" (receiveRename)="receiveRename($event)"></app-rename-modal>
+<app-confirm-delete-modal [resourceType]="'notebook'" [resource]="this.card.notebook" (receiveDelete)="receiveNotebookDelete($event)"></app-confirm-delete-modal>
+
+<app-confirm-delete-modal [resourceType]="'cohort'" [resource]="this.card.cohort" (receiveDelete)="receiveDelete($event)"></app-confirm-delete-modal>
+<app-cohort-edit-modal [cohort]="this.card.cohort" (updateFinished)="updateFinished()"></app-cohort-edit-modal>
+
+
