--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -15,7 +15,7 @@
     </button>
   </div>
   <div *ngIf="ingredientsName">Ingredients in this brand: {{ingredientsName}} </div>
-  <div *ngIf="numMatches > 1 && !ingredientsName">
+  <div *ngIf="numMatches > 1">
     {{searchTerm}} exists {{numMatches}} times in the tree below
   </div>
   <div *ngIf="options.length" class="dropdown-menu">
