RW-1107 fixed physical measurement tree with icd9 and icd10

--- a/ui/src/app/cohort-search/node/node.component.html
+++ b/ui/src/app/cohort-search/node/node.component.html
@@ -1,5 +1,5 @@
 <clr-tree-node >
-  <div class="clr-treenode-link container" (click)="toggleExpanded()">
+  <div [id]="nodeId" class="clr-treenode-link container" (click)="toggleExpanded()">
     <crit-node-info [node]="node"></crit-node-info>
   </div>
 
