[RW-998][risk=no] Add real-time counts to demographics age slider  (#1172)
* RW-998 add count to age slider

* RW-998 format counts with number pipe

* RW-998 get slider connect DOM element on age range change

* RW-998 update count and position using slide event

* RW-998 remove commented styles

* [RW-1263][risk=no] Fix encounter modifier (#1173)

* RW-1264 fixed mixing of icd9/icd10 codes. (#1174)

* [RW-1262][risk=no]Drugs - add informational text below search (#1175)

* RW-1262 informational text added

* RW-1262 merged with master

* RW-1262 informational text added

* RW-1262 merged with master

* RW-998 add count to age slider

* RW-998 format counts with number pipe

* RW-998 get slider connect DOM element on age range change

* RW-998 update count and position using slide event

* RW-998 remove commented styles

--- a/ui/src/app/cohort-search/demographics/demographics.component.html
+++ b/ui/src/app/cohort-search/demographics/demographics.component.html
@@ -46,10 +46,16 @@
         class="number-display"
         (blur)="checkMin()">
       <div class="slider">
+        <div id="count-wrapper">
+          <span id="age-count" class="badge badge-info">
+            {{ ageCount | number }}
+          </span>
+        </div>
         <nouislider
           [min]="minAge" [max]="maxAge" [step]="1"
           [behaviour]="'drag'"
           [connect]="true"
+          (slide)="centerAgeCount()"
           [formControl]="demoForm.controls.ageRange">
         </nouislider>
       </div>
