--- a/ui/src/app/cohort-search/search-group-select/search-group-select.component.html
+++ b/ui/src/app/cohort-search/search-group-select/search-group-select.component.html
@@ -21,8 +21,9 @@
           clrDropdownItem>{{criteria.name}}</button>
         <div class="dropdown-divider"></div>
         <h4 class="dropdown-header">Domains</h4>
+        <!--*ngIf="criteria.name !=='ICD9 Codes' && criteria.name !=='ICD10 Codes' "-->
         <ng-container *ngFor="let criteria of domainTypes">
-          <button *ngIf="criteria.name !=='ICD9 Codes' && criteria.name !=='ICD10 Codes' "
+          <button
                   id="criteria.type"
                   class="dropdown-item"
                   type="button"
