multiple concept analysis result test

--- a/public-ui/src/app/views/ehr-view/ehr-view.component.html
+++ b/public-ui/src/app/views/ehr-view/ehr-view.component.html
@@ -101,9 +101,9 @@
     </div>
 
     <div class="col-md-8 col-sm-6 col-xs-12 chart-wrapper flex-xs-middle">
-      <app-chart [concepts]="top10Results" [chartTitle]="'Top 10 by particpant count'" [pointWidth]="15" [backgroundColor]="'#D9E4EA'"> </app-chart>
+      <app-chart [concepts]="top10Results" [chartTitle]="'Top 10 by participant count'" [pointWidth]="15" [backgroundColor]="'#D9E4EA'"> </app-chart>
 
-     <!-- <app-chart [concepts]="top10Results" [chartTitle]="'Top 10 by particpant count'" [pointWidth]="20" [backgroundColor]="'#D9E4EA'"> </app-chart> -->
+     <!-- <app-chart [concepts]="top10Results" [chartTitle]="'Top 10 by participant count'" [pointWidth]="20" [backgroundColor]="'#D9E4EA'"> </app-chart> -->
 
     </div>
 
@@ -128,7 +128,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 grid-header flex-xs-middle"> {{dbDomain.domainDisplay}}</div>
-          <div class="col-md-4 grid-header flex-xs-middle"> Number of particpants </div>
+          <div class="col-md-4 grid-header flex-xs-middle"> Participants of <b> {{totalParticipants | number}}</b>  </div>
           <div class="col-md-3 grid-header flex-xs-middle info-text"> <clr-icon class="" shape="info-standard" class="is-solid"></clr-icon> What is SNOMED? </div>
           <div class="col-md-1 grid-header flex-xs-middle info-text"> View graphs </div>
 
@@ -136,9 +136,9 @@
         <div class="row expandable-grid-row"
              *ngFor="let r of items.concat(standardConcepts), let i = index"
              [ngClass]="{'expanded-grid-row': r.expanded}" >
-          <div class="col-md-4 flex-xs-middle" innerHtml="{{i+1}}. {{r.conceptName | highlightSearch : prevSearchText}}"> </div>
+          <div class="col-md-4 flex-xs-middle" innerHtml="{{i+1}}. {{r.conceptName | highlightSearch : prevSearchText}} -- {{r.conceptId}}"> </div>
           <div class="col-md-4 flex-xs-middle">
-            {{r.countValue | number }} out of {{totalParticipants | number}} participants
+            {{r.countValue | number }}
 
           </div>
           <div class="col-md-3 flex-xs-middle">
