--- a/ui/src/app/cohort-search/node-info/node-info.component.html
+++ b/ui/src/app/cohort-search/node-info/node-info.component.html
@@ -4,12 +4,12 @@
           *ngIf="selectable"
           type="button"
           class="btn btn-sm btn-link selection-button"
-          [class.pm]="isPM()"
-          [disabled]="isSelected && !node.get('hasAttributes')"
+          [class.pm]="isPM"
+          [disabled]="isDisabled && !hasAttributes"
           (click)="select($event)">
-    <clr-icon *ngIf="isSelected && !node.get('hasAttributes')" shape="check-circle" size="20" class="selection-icon"></clr-icon>
-    <clr-icon *ngIf="!isSelected && !node.get('hasAttributes')" shape="plus-circle" size="20" class="selection-icon"></clr-icon>
-    <clr-icon *ngIf="node.get('hasAttributes')" shape="slider" dir="right" size="20" class="selection-icon-blue is-solid"></clr-icon>
+    <clr-icon *ngIf="isDisabled && !hasAttributes" shape="check-circle" size="20" class="selection-icon"></clr-icon>
+    <clr-icon *ngIf="!isDisabled && !hasAttributes" shape="plus-circle" size="20" class="selection-icon"></clr-icon>
+    <clr-icon *ngIf="hasAttributes" shape="slider" dir="right" size="20" class="selection-icon-blue is-solid"></clr-icon>
   </button>
 
   <!-- CODE -->
@@ -28,7 +28,7 @@
     [innerHTML]="displayName | safeHtml"></div>
 
   <!-- COUNT -->
-  <div *ngIf="showCount()" class="count">
+  <div *ngIf="showCount" class="count">
     <span class="text-muted">&#124;</span>
     <span class="badge badge-info">
       <span *ngIf="node.get('group')">~</span>
