--- a/ui/src/app/cohort-search/search-group-select/search-group-select.component.html
+++ b/ui/src/app/cohort-search/search-group-select/search-group-select.component.html
@@ -21,9 +21,8 @@
           clrDropdownItem>{{criteria.name}}</button>
         <div class="dropdown-divider"></div>
         <h4 class="dropdown-header">Domains</h4>
-        <!--*ngIf="criteria.name !=='ICD9 Codes' && criteria.name !=='ICD10 Codes' "-->
         <ng-container *ngFor="let criteria of domainTypes">
-          <button
+          <button *ngIf="criteria.name !=='ICD9 Codes' && criteria.name !=='ICD10 Codes' "
                   id="criteria.type"
                   class="dropdown-item"
                   type="button"
@@ -31,7 +30,6 @@
                   (click)="launchWizard(criteria)"
                   clrDropdownItem>{{criteria.name}}</button>
         </ng-container>
-
       </clr-dropdown-menu>
     </clr-dropdown>
   </div>
