--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -14,8 +14,8 @@
       <em>No results based on your search</em>
     </button>
   </div>
-  <div *ngIf="ingredientsName">Ingredients in this brand: {{ingredientsName}} </div>
-  <div *ngIf="numMatches > 1 && !ingredientsName">
+  <div *ngIf="ingredientList.length">Ingredients in this brand: {{ingredientList.join(', ')}} </div>
+  <div *ngIf="numMatches > 1 && !ingredientList.length">
     {{searchTerm}} exists {{numMatches}} times in the tree below
   </div>
   <div *ngIf="options.length" class="dropdown-menu">
