--- a/ui/src/app/cohort-search/search-group-select/search-group-select.component.html
+++ b/ui/src/app/cohort-search/search-group-select/search-group-select.component.html
@@ -22,7 +22,8 @@
         <div class="dropdown-divider"></div>
         <h4 class="dropdown-header">Domains</h4>
         <ng-container *ngFor="let criteria of domainTypes">
-          <button *ngIf="criteria.name !=='ICD9 Codes' && criteria.name !=='ICD10 Codes' "
+          <!--*ngIf="criteria.name !=='ICD9 Codes' && criteria.name !=='ICD10 Codes' "-->
+          <button
                   id="criteria.type"
                   class="dropdown-item"
                   type="button"
