RW-1271 hide autocomplete options when clicked outside of dropdown

--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
-<div class="dropdown" [class.open]="options.length || noResults">
+<div #searchBar class="dropdown" [class.open]="options.length || noResults">
   <div class="search-box">
     <clr-icon shape="search"></clr-icon>
     <input clrInput
