--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -54,6 +54,16 @@
 
   </div>
 
+  <!-- Todo show general totals for demographics of who took the survey -->
+  <!--
+  <div class="row">
+    <div class="col-xs-12">
+      <app-concept-charts [concept]="survey" [showRace]="true" [showAge]="true" [showGender]="true"
+                        [showEthnicity]="true" [backgroundColor]="'#ECF1F4'">
+      </app-concept-charts>
+    </div>
+  </div>
+  -->
 
   <div class="survey-results" *ngIf="resultsComplete">
 
