--- a/public-ui/src/app/views/pm/pm.component.html
+++ b/public-ui/src/app/views/pm/pm.component.html
@@ -37,21 +37,24 @@
         <!-- Loop through the genders we have results for showing the graph -->
         <div *ngFor="let gender of selectedConcept.analyses.genderAnalysis.results" class="col-md-4 col-xs-12 chart-wrapper">
 
+          <app-chart *ngIf="gender.stratum2 === dbc.FEMALE_GENDER_ID && selectedConcept.analyses &&
+                         selectedConcept.analyses.measurementValueGenderAnalysis" [genderId]="dbc.FEMALE_GENDER_ID"
+                     [chartTitle]="gender.analysisStratumName + ' - ' + gender.countValue.toLocaleString()"
+                     [chartType]="selectedConcept.chartType"
+                     [analysis]="selectedConcept.analyses.measurementValueGenderAnalysis"></app-chart>
 
               <app-chart *ngIf="gender.stratum2 === dbc.MALE_GENDER_ID && selectedConcept.analyses &&
-                         selectedConcept.analyses.measurementValueMaleAnalysis"
-                         [chartTitle]="gender.analysisStratumName + ' - ' + gender.countValue.toLocaleString()" [chartType]="selectedConcept.chartType"
-                         [analysis]="selectedConcept.analyses.measurementValueMaleAnalysis"></app-chart>
-
-              <app-chart *ngIf="gender.stratum2 === dbc.FEMALE_GENDER_ID && selectedConcept.analyses &&
-                         selectedConcept.analyses.measurementValueFemaleAnalysis"
-                         [chartTitle]="gender.analysisStratumName + ' - ' + gender.countValue.toLocaleString()" [chartType]="selectedConcept.chartType"
-                         [analysis]="selectedConcept.analyses.measurementValueFemaleAnalysis"></app-chart>
+                         selectedConcept.analyses.measurementValueGenderAnalysis" [genderId]="dbc.MALE_GENDER_ID"
+                         [chartTitle]="gender.analysisStratumName + ' - ' + gender.countValue.toLocaleString()"
+                         [chartType]="selectedConcept.chartType"
+                         [analysis]="selectedConcept.analyses.measurementValueGenderAnalysis"></app-chart>
 
               <app-chart *ngIf="gender.stratum2 === dbc.OTHER_GENDER_ID && selectedConcept.analyses &&
-                         selectedConcept.analyses.measurementValueOtherGenderAnalysis"
-                         [chartTitle]="gender.analysisStratumName + ' - ' + gender.countValue.toLocaleString()" [chartType]="selectedConcept.chartType"
-                         [analysis]="selectedConcept.analyses.measurementValueOtherGenderAnalysis"></app-chart>
+                         selectedConcept.analyses.measurementValueGenderAnalysis"
+                         [genderId]="dbc.OTHER_GENDER_ID_GENDER_ID"
+                         [chartTitle]="gender.analysisStratumName + ' - ' + gender.countValue.toLocaleString()"
+                         [chartType]="selectedConcept.chartType"
+                         [analysis]="selectedConcept.analyses.measurementValueGenderAnalysis"></app-chart>
 
         </div>
 
