RW-1107 type added with code while selecting

--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -87,6 +87,9 @@
                             [index]="i"
                             [parameter]="parameter">
                     </crit-selection-info>
+                    <!--<crit-selection-info-->
+                            <!--[parameter]="(selection$|async)">-->
+                    <!--</crit-selection-info>-->
                   </div>
                   <div *ngIf="ctype !== treeType[treeType.DEMO]" class="footer">
                     <button type="button"
