--- a/ui/src/app/cohort-search/selection-info/selection-info.component.html
+++ b/ui/src/app/cohort-search/selection-info/selection-info.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <div class="type-header" *ngIf="parameter.get('type') === 'ICD9' || parameter.get('type') === 'ICD10'" >{{parameter.get('type')}}</div>
   <button type="button"
     [style.margin]="'0 0 0 0 '"
     [style.padding]="'0 0.25rem'"
