RW-1107 revert the icon changes

--- a/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
+++ b/ui/src/app/cohort-search/modifier-page/modifier-page.component.html
@@ -11,10 +11,7 @@
                  [popper]="codesPopper"
                  [popperTrigger]="'hover'"
                  [popperPlacement]="'top'">
-              <div class="label-info">
-                  <clr-icon  class=" is-solid" shape="info-standard"></clr-icon>
-              </div>
-
+            <clr-icon  class="label-info is-solid" shape="info-standard"></clr-icon>
           </small>
           <popper-content #codesPopper>
             <p class="tooltip-text" [style.margin]="'0'">
