--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -5,6 +5,9 @@
      class="no-border"
      type="text"
      name="searchTerm"
+     (keyup.enter)="enterSelect()"
+     (keyup.arrowup)="moveUp()"
+     (keyup.arrowdown)="moveDown()"
      [(ngModel)]="searchTerm"
      (input)="inputChange($event.target.value)"/>
     <span *ngIf="loading" class="spinner spinner-inline"></span>
@@ -20,9 +23,10 @@
   </div>
   <div *ngIf="options.length" class="dropdown-menu">
     <button
-      *ngFor="let option of options"
+      *ngFor="let option of options; let i = index"
       class="dropdown-item"
       type="button"
+      [class.active]="i === highlightedOption"
       (click)="selectOption(option)"
       [innerHTML]="option.displayName | safeHtml">
     </button>
