--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -1,6 +1,7 @@
 <div #searchBar class="dropdown" [class.open]="options.length || noResults">
   <div class="search-box">
-    <clr-icon shape="search"></clr-icon>
+    <clr-icon *ngIf="!loading" shape="search"></clr-icon>
+    <span *ngIf="loading" class="spinner spinner-inline"></span>
     <input clrInput
      class="no-border"
      type="text"
@@ -10,7 +11,6 @@
      (keyup.arrowdown)="moveDown()"
      [(ngModel)]="searchTerm"
      (input)="inputChange($event.target.value)"/>
-    <span *ngIf="loading" class="spinner spinner-inline"></span>
   </div>
   <div *ngIf="noResults" class="dropdown-menu">
     <button class="dropdown-item disabled">
