--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -72,14 +72,16 @@
                   [clrDisabled]="mode == Mode.Edit">
               </clr-checkbox>
               <div>
-                <label class="checkbox-label" for="clr-checkbox-disease-focused-research"><h3 class="data-use-label">{{researchPurposeItems.diseaseFocusedResearch.shortDescription}}</h3></label>
+                <label class="checkbox-label" for="clr-checkbox-disease-focused-research"><h3 class="data-use-label">
+                  {{researchPurposeItems.diseaseFocusedResearch.shortDescription}}</h3></label>
                 <div>
                   {{researchPurposeItems.diseaseFocusedResearch.longDescription}}
                 </div>
                 <div style="display: flex">
                   <input type="text" class="input" name="disease-specification"
                          [(ngModel)]="workspace.researchPurpose.diseaseOfFocus" [disabled]="mode == Mode.Edit"
-                         placeholder="Name of Disease" style="width: calc(50% - 2rem); margin-right: 2rem; margin-to`p: 0.5rem">
+                         placeholder="Name of Disease"
+                         style="width: calc(50% - 2rem); margin-right: 2rem; margin-to`p: 0.5rem">
                 </div>
               </div>
             </div>
@@ -94,7 +96,8 @@
                     [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-methods-development"><h3 class="data-use-label">{{researchPurposeItems.methodsDevelopment.shortDescription}}</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-methods-development"><h3 class="data-use-label">
+                    {{researchPurposeItems.methodsDevelopment.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.methodsDevelopment.longDescription}}
                   </div>
@@ -110,7 +113,8 @@
                     [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-aggregate-analysis"><h3 class="data-use-label">{{researchPurposeItems.aggregateAnalysis.shortDescription}}</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-aggregate-analysis"><h3 class="data-use-label">
+                    {{researchPurposeItems.aggregateAnalysis.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.aggregateAnalysis.longDescription}}
                   </div>
@@ -128,7 +132,8 @@
                     [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-control-set"><h3 class="data-use-label">{{researchPurposeItems.controlSet.shortDescription}}</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-control-set"><h3 class="data-use-label">
+                    {{researchPurposeItems.controlSet.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.controlSet.longDescription}}
                   </div>
@@ -144,7 +149,8 @@
                     [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-ancestry"><h3 class="data-use-label">{{researchPurposeItems.ancestry.shortDescription}}</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-ancestry"><h3 class="data-use-label">
+                    {{researchPurposeItems.ancestry.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.ancestry.longDescription}}
                   </div>
@@ -162,7 +168,8 @@
                     [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-population"><h3 class="data-use-label">{{researchPurposeItems.population.shortDescription}}</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-population"><h3 class="data-use-label">
+                    {{researchPurposeItems.population.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.population.longDescription}}
                   </div>
@@ -178,7 +185,8 @@
                     [clrDisabled]="mode == Mode.Edit">
                 </clr-checkbox>
                 <div>
-                  <label class="checkbox-label" for="clr-checkbox-commercial-purpose"><h3 class="data-use-label">{{researchPurposeItems.commercialPurpose.shortDescription}}</h3></label>
+                  <label class="checkbox-label" for="clr-checkbox-commercial-purpose"><h3 class="data-use-label">
+                    {{researchPurposeItems.commercialPurpose.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.commercialPurpose.longDescription}}
                   </div>
@@ -190,14 +198,17 @@
             <div class="checkbox-group">
               <div style="display: flex">
                 <div (click)="workspace.researchPurpose.containsUnderservedPopulation = !workspace.researchPurpose.containsUnderservedPopulation"
-                     style="cursor: pointer; padding-right: 6px">
+                    style="cursor: pointer; padding-right: 6px">
                   <clr-icon *ngIf="workspace.researchPurpose.containsUnderservedPopulation"
-                            shape="minus-circle" class="underserved-icon"></clr-icon>
+                      shape="minus-circle" class="underserved-icon"></clr-icon>
                   <clr-icon *ngIf="!workspace.researchPurpose.containsUnderservedPopulation"
-                            shape="plus-circle" class="underserved-icon"></clr-icon>
+                      shape="plus-circle" class="underserved-icon"></clr-icon>
                 </div>
                 <div>
-                  <label class="checkbox-label" (click)="workspace.researchPurpose.containsUnderservedPopulation = !workspace.researchPurpose.containsUnderservedPopulation"><h3 class="data-use-label">{{researchPurposeItems.containsUnderservedPopulation.shortDescription}}</h3></label>
+                  <label class="checkbox-label"
+                         (click)="workspace.researchPurpose.containsUnderservedPopulation = !workspace.researchPurpose.containsUnderservedPopulation">
+                    <h3 class="data-use-label">
+                      {{researchPurposeItems.containsUnderservedPopulation.shortDescription}}</h3></label>
                   <div>
                     {{researchPurposeItems.containsUnderservedPopulation.longDescription}}
                   </div>
@@ -260,17 +271,17 @@
           <div class="tooltip-content-wrapper">
             <ng-container [ngSwitch]="mode">
               <button *ngSwitchCase="Mode.Create" class="btn add-button btn-primary"
-                      [clrLoading]="savingWorkspace" (click)="addWorkspace()" [disabled]="!allowSave">
+                  [clrLoading]="savingWorkspace" (click)="addWorkspace()" [disabled]="!allowSave">
                 Create Workspace
               </button>
               <button *ngSwitchCase="Mode.Edit" class="btn add-button btn-primary"
-                      [clrLoading]="savingWorkspace" (click)="updateWorkspace()"
-                      [disabled]="!hasPermission || !allowSave">
+                  [clrLoading]="savingWorkspace" (click)="updateWorkspace()"
+                  [disabled]="!hasPermission || !allowSave">
                 Update Workspace
               </button>
               <button *ngSwitchCase="Mode.Clone" class="btn add-button btn-primary"
-                      [clrLoading]="savingWorkspace" (click)="cloneWorkspace()"
-                      [disabled]="!allowSave">
+                  [clrLoading]="savingWorkspace" (click)="cloneWorkspace()"
+                  [disabled]="!allowSave">
                 Clone Workspace
               </button>
             </ng-container>
