--- a/ui/src/app/cohort-search/search-bar/search-bar.component.html
+++ b/ui/src/app/cohort-search/search-bar/search-bar.component.html
@@ -1,28 +1,32 @@
-<div class="dropdown" [class.open]="options.length || noResults">
+<div #searchBar class="dropdown" [class.open]="options.length || noResults">
   <div class="search-box">
-    <clr-icon shape="search"></clr-icon>
+    <clr-icon *ngIf="!loading" shape="search"></clr-icon>
+    <span *ngIf="loading" class="spinner spinner-inline"></span>
     <input clrInput
      class="no-border"
      type="text"
      name="searchTerm"
+     (keyup.enter)="enterSelect()"
+     (keyup.arrowup)="moveUp()"
+     (keyup.arrowdown)="moveDown()"
      [(ngModel)]="searchTerm"
      (input)="inputChange($event.target.value)"/>
-    <span *ngIf="loading" class="spinner spinner-inline"></span>
   </div>
   <div *ngIf="noResults" class="dropdown-menu">
     <button class="dropdown-item disabled">
       <em>No results based on your search</em>
     </button>
   </div>
-  <div *ngIf="ingredientsName">Ingredients in this brand: {{ingredientsName}} </div>
-  <div *ngIf="numMatches > 1 && !ingredientsName">
+  <div *ngIf="ingredientList.length">Ingredients in this brand: {{ingredientList.join(', ')}} </div>
+  <div *ngIf="numMatches > 1 && !ingredientList.length">
     {{searchTerm}} exists {{numMatches}} times in the tree below
   </div>
   <div *ngIf="options.length" class="dropdown-menu">
     <button
-      *ngFor="let option of options"
+      *ngFor="let option of options; let i = index"
       class="dropdown-item"
       type="button"
+      [class.active]="i === highlightedOption"
       (click)="selectOption(option)"
       [innerHTML]="option.displayName | safeHtml">
     </button>
