Biopete/ppi measurements [risk=low] (#1155)
* pm in prog

* pm in prog

* pm in progress

* progress on measurement charts

* linting

* linting"

* linting

* pm in progress

* pm progress

* synonms added, age all deciles

* linting

* pm progress

* pm progress

* progress labs chart view

* ppi clean up

* linting

* linting cleanup

* Adding indexes back

* refactor in progerss cleanup constants

* db constants service added

* clean up, db-constants service used

* linting

* clean up. Unit on analysis

* linting. Comment out link to mockup

* fix ehr view where search results got trumped by initial load of all results when it takes long time. Cleanup

* Comment to push

* Remove accidental changes to public-api

* cleanup issues from code review

* linting

* cleanup

* typos and column width for name and synonym same

* clean up

* refactor db-config service data

* Copying in master's DataBrowserController because mine rebased weird.

* Unit on analysis

* measurements for labs shown in concept charts component

* lint

--- a/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
+++ b/public-ui/src/app/data-browser/concept-charts/concept-charts.component.html
@@ -1,18 +1,67 @@
-<div class="db-page-spinner" *ngIf="loading" >
+<div class="db-page-spinner" *ngIf="loading()" >
   <span  class="spinner">
     Loading...
   </span>
 </div>
 
-<div class="row concept-charts chart"  >
-  <div class="col-md-4 col-xs-12" *ngIf="showGender && genderAnalysis"  >
-    <app-chart [analysis]="genderAnalysis" [backgroundColor]="backgroundColor"> </app-chart>
-  </div>
-  <div class="col-md-4 col-xs-12 chart" *ngIf="showAge && ageAnalysis" >
-    <app-chart [analysis]="ageAnalysis" [pointWidth]="20" [backgroundColor]="backgroundColor"> </app-chart>
+<div *ngIf="!loading()" class="row concept-charts chart">
+  <!-- show measurements binned by gender if we want -->
+  <!-- Loop through the genders we have measurement results for  for showing the graph
+   This looping variable is set if showMeasurements is passed in to the component-->
+  <div class="col-md-4 col-xs-12 chart" *ngFor="let gender of genderResults">
+
+    <app-chart *ngIf="gender.stratum2 === dbc.FEMALE_GENDER_ID"
+               [genderId]="dbc.FEMALE_GENDER_ID"
+               [chartTitle]="gender.analysisStratumName + ' - ' + gender.countValue.toLocaleString()"
+               [chartType]="'histogram'"
+               [analysis]="analyses.measurementValueGenderAnalysis"
+               [backgroundColor]="backgroundColor"></app-chart>
+
+    <app-chart *ngIf="gender.stratum2 === dbc.MALE_GENDER_ID"
+               [genderId]="dbc.MALE_GENDER_ID"
+               [chartTitle]="gender.analysisStratumName + ' - ' + gender.countValue.toLocaleString()"
+               [chartType]="'histogram'"
+               [analysis]="analyses.measurementValueGenderAnalysis"
+               [backgroundColor]="backgroundColor"></app-chart>
+
+    <app-chart *ngIf="gender.stratum2 === dbc.OTHER_GENDER_ID"
+               [genderId]="dbc.OTHER_GENDER_ID_GENDER_ID"
+               [chartTitle]="gender.analysisStratumName + ' - ' + gender.countValue.toLocaleString()"
+               [chartType]="'histogram'"
+               [analysis]="analyses.measurementValueGenderAnalysis"
+               [backgroundColor]="backgroundColor"></app-chart>
+
   </div>
 
-  <div class="col-md-4 col-xs-12 chart"  *ngIf="showSources && ageAnalysis && sourceConcepts && sourceConcepts.length">
-    <app-chart [concepts]="sourceConcepts" [sources]="true" [pointWidth]="20" [backgroundColor]="backgroundColor" [chartTitle]="'Sources'"> </app-chart>
+
+  <!-- show gender totals  if we want -->
+  <div class="col-md-4 col-xs-12 chart" *ngIf="showGender && analyses.genderAnalysis"  >
+    <app-chart [analysis]="analyses.genderAnalysis" [backgroundColor]="backgroundColor"> </app-chart>
   </div>
+
+  <!-- show age totals  if we want -->
+  <div class="col-md-4 col-xs-12 chart" *ngIf="showAge && analyses.ageAnalysis" >
+    <app-chart [analysis]="analyses.ageAnalysis" [pointWidth]="20" [backgroundColor]="backgroundColor"> </app-chart>
+  </div>
+
+  <!-- show sources totals  if we want -->
+  <div class="col-md-4 col-xs-12 chart"  *ngIf="showSources && sourceConcepts && sourceConcepts.length">
+    <app-chart [concepts]="sourceConcepts" [sources]="true" [pointWidth]="20"
+               [backgroundColor]="backgroundColor" [chartTitle]="'Sources'">
+    </app-chart>
+  </div>
+
+  <!-- show race totals  if we want -->
+  <div class="col-md-4 col-xs-12 chart"  *ngIf="showRace && analyses.raceAnalysis ">
+    <app-chart [analysis]="analyses.raceAnalysis" [pointWidth]="20"
+               [backgroundColor]="backgroundColor" [chartTitle]="'Race'">
+    </app-chart>
+  </div>
+  <!-- show ethnicity totals  if we want -->
+  <div class="col-md-4 col-xs-12 chart"  *ngIf="showEthnicity && analyses.ethnicityAnalysis ">
+    <app-chart [analysis]="analyses.ethnicityAnalysis" [pointWidth]="20"
+               [backgroundColor]="backgroundColor" [chartTitle]="'Ethnicity'">
+    </app-chart>
+  </div>
+
 </div>
