--- a/public-ui/src/app/views/survey-view/survey-view.component.html
+++ b/public-ui/src/app/views/survey-view/survey-view.component.html
@@ -54,6 +54,16 @@
 
   </div>
 
+  <!-- Todo show general totals for demographics of who took the survey -->
+  <!--
+  <div class="row">
+    <div class="col-xs-12">
+      <app-concept-charts [concept]="survey" [showRace]="true" [showAge]="true" [showGender]="true"
+                        [showEthnicity]="true" [backgroundColor]="'#ECF1F4'">
+      </app-concept-charts>
+    </div>
+  </div>
+  -->
 
   <div class="survey-results" *ngIf="resultsComplete">
 
@@ -102,14 +112,8 @@
 
           <div class="col-xs-12 col-sm-12">
             <div class="box-title"> Question {{i + 1}}</div>
-            <div class="box-sub-title question" innerHtml="{{ q.conceptName | highlightSearch : searchText.value}})">   </div>
+            <div class="box-sub-title question" innerHtml="{{ q.conceptName | highlightSearch : searchText.value}} -- {{q.conceptId}}">   </div>
           </div>
-
-          <!-- Don't show this chart <div class="col-md-6 col-xs-12 col-sm-6 answers-bar-col">
-            <div class="chart-wrapper">
-              <app-chart *ngIf="q.countAnalysis" [analysis]="q.countAnalysis" [chartType]="'bar'" (resultClicked)="graphAnswerClicked(item)"></app-chart>
-            </div>
-          </div>-->
 
         </div>
 
@@ -119,7 +123,7 @@
             </div>
         </div>
 
-        <div class="row flex-items-xs-middle answers" [hidden]="!showAnswer[q.conceptId]">
+        <div class="row  answers" [hidden]="!showAnswer[q.conceptId]">
           <div class="col-md-7 col-sm-5 col-xs-12 answer-list">
             <div  class="row"  [class.answer-active]="q.selectedAnswer && q.selectedAnswer.id === a.id" (click)="showAnswerGraphs(q, a)" *ngFor="let a of q.countAnalysis.results">
               <div class="answer-text col-sm-6 col-xs-12" >
@@ -143,7 +147,7 @@
                 <app-chart [analysis]="q.genderAnalysis" [selectedResult]="q.selectedAnswer" [backgroundColor]="'#D9E4EA'"></app-chart>
               </div>
               <div class="chart-wrapper age col-xs-12 col-sm-12">
-                <app-chart [analysis]="q.ageAnalysis" [selectedResult]="q.selectedAnswer" [backgroundColor]="'#D9E4EA'"></app-chart>
+                <app-chart [analysis]="q.ageAnalysis" [selectedResult]="q.selectedAnswer" [pointWidth]="20" [backgroundColor]="'#D9E4EA'"></app-chart>
               </div>
 
             </div>
